--- a/exams/todo_app/index.css
+++ b/exams/todo_app/index.css
@@ -36,6 +36,7 @@ body {
 }
 
 .task-container {
+    min-width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -69,6 +70,7 @@ body {
 }
 
 .tasks {
+    min-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -80,6 +82,5 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    background-color: gray;
-    border: 1rem 5% black;
+    border: 0.1rem solid black;
 }
